[gd_scene load_steps=21 format=3 uid="uid://0vggfaigyivv"]

[ext_resource type="Script" uid="uid://dcgvuy04wx7jl" path="res://scripts/street_picker.gd" id="1_458dy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_458dy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glvu8"]
bg_color = Color(0.6, 0.6, 0.6, 0.784314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i1yyk"]
bg_color = Color(0.6, 0.6, 0.6, 0.784314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vepx"]
bg_color = Color(0.6, 0.6, 0.6, 0.784314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ru7kl"]
bg_color = Color(0.6, 0.6, 0.6, 0.784314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_458dy"]
size = Vector2(256, 47)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glvu8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_458dy"]
bg_color = Color(1, 1, 1, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1f27"]
bg_color = Color(0, 0, 0, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lilks"]
bg_color = Color(1, 1, 1, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3w7ta"]
bg_color = Color(1, 1, 1, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1yyk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37imy"]
bg_color = Color(1, 1, 1, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tlfr"]
bg_color = Color(0, 0, 0, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4a5o6"]
bg_color = Color(1, 1, 1, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_voitg"]
bg_color = Color(1, 1, 1, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3vepx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deo6o"]
bg_color = Color(1, 1, 1, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uuouj"]
bg_color = Color(0, 0, 0, 0.862745)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="street_picker" type="Node2D" node_paths=PackedStringArray("names", "button", "button_text")]
script = ExtResource("1_458dy")
names = [NodePath("Proizvodstvennaya"), NodePath("Vorovskovo"), NodePath("Solnechnaya")]
button = NodePath("Button")
button_text = NodePath("ButtonText")

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -23.0
offset_right = 127.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_458dy")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_glvu8")
theme_override_styles/hover = SubResource("StyleBoxFlat_i1yyk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3vepx")
theme_override_styles/normal = SubResource("StyleBoxFlat_ru7kl")

[node name="Area2D" type="Area2D" parent="Button"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2(127, 22)
shape = SubResource("RectangleShape2D_458dy")

[node name="Proizvodstvennaya" type="Button" parent="."]
visible = false
offset_right = 254.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_glvu8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_458dy")
theme_override_styles/hover = SubResource("StyleBoxFlat_u1f27")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lilks")
theme_override_styles/normal = SubResource("StyleBoxFlat_3w7ta")

[node name="Vorovskovo" type="Button" parent="."]
visible = false
offset_right = 254.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_i1yyk")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_37imy")
theme_override_styles/hover = SubResource("StyleBoxFlat_2tlfr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4a5o6")
theme_override_styles/normal = SubResource("StyleBoxFlat_voitg")

[node name="Solnechnaya" type="Button" parent="."]
visible = false
offset_right = 254.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_3vepx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_deo6o")
theme_override_styles/hover = SubResource("StyleBoxFlat_uuouj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_deo6o")
theme_override_styles/normal = SubResource("StyleBoxFlat_deo6o")

[node name="ButtonText" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -23.0
offset_right = 127.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_pressed"]
[connection signal="area_entered" from="Button/Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Button/Area2D" to="." method="_on_area_exited"]
